# Operacii-so-Vektori-2D

./: CMakeLists.txt  README.md  debugHelper.h  main.cpp  ortogonalniGlavniOski.h
